--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script>
-        function navigateTo(page) {
+        function navigateTo(page)
+        {
             window.location.href = page;
         }
     </script>
@@ -25,7 +26,7 @@
 <div class="container">
     <!-- <div class="intro">
     </div> -->
-    <img src="Screenshot 2024-08-03 143551.png" alt="Profile Image" class="profile-img">
+    <img src="Profile.png" alt="Profile Image" class="profile-img">
     <h1>Hi, I'm Nithyanand!</h1>
     <p>I’m a passionate Full Stack Java developer with a knack for crafting innovative solutions.</p>
     <p>Currently, I’m pursuing my studies at St. Joseph's College of Engineering.</p>
