--- a/src/projects.html
+++ b/src/projects.html
@@ -12,7 +12,7 @@
    
     <ul>
         <li><a href="about.html" target="_self">About</a></li>
-        <li><a href="/index.html" target="_self">Home</a></li>
+        <!-- <li><a href="/index.html" target="_self">Home</a></li> -->
         <li><a href="projects.html" target="_self">Projects</a></li>
         <li><a href="education.html" target="_self">Education</a></li>
         <li><a href="internship.html" target="_self">Internships</a></li>
@@ -32,11 +32,12 @@
     </div>
 
     <div class="project-card">
-        <h2>Flight Ticket Booking System | Java, MySQL</h2>
+        <h2> Bus Ticket Booking System | Spring Boot, Hibernate, Java, Thymeleaf, Lombok</h2>
         <p>
-            •  Designed scalable backend solutions in Java for a console-based application, optimizing data management with MySQL, reducing booking time by 40%. (November 2023)<br>
-            •  Developed efficient database interactions and application logic, enhancing user experience and system performance.<br>
-            •  <a href="https://github.com/Nithyanandb/Flight_Ticket_Database">GitHub: Access Project</a>
+            •  Developed and deployed a scalable backend for a Ticket Booking System using Spring Boot and Hibernate. <br />
+            •  Enhanced user experience with a responsive Thymeleaf frontend and optimized code with Lombok. <br />
+            •  Ensured application reliability through rigorous testing and debugging.<br />
+            •  <a href="">GitHub: Access Project</a>
         </p>
     </div>
 
