--- a/src/education.html
+++ b/src/education.html
@@ -10,7 +10,7 @@
 <nav class="nav">
     <ul>
         <li><a href="about.html" target="_self">About</a></li>
-        <li><a href="/index.html" target="_self">Home</a></li>
+<!--         <li><a href="/index.html" target="_self">Home</a></li> -->
         <li><a href="projects.html" target="_self">Projects</a></li>
         <li><a href="education.html" target="_self">Education</a></li>
         <li><a href="internship.html" target="_self">Internships</a></li>
