--- a/src/projects.html
+++ b/src/projects.html
@@ -12,7 +12,7 @@
    
     <ul>
         <li><a href="about.html" target="_self">About</a></li>
-        <li><a href="/index.html" target="_self">Home</a></li>
+<!--       <li><a href="/index.html" target="_self">Home</a></li> -->
         <li><a href="projects.html" target="_self">Projects</a></li>
         <li><a href="education.html" target="_self">Education</a></li>
         <li><a href="internship.html" target="_self">Internships</a></li>
